# ESP32_IMU_crude

./: sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  genericFlt.h  i2c_simple_main.c  main.c  main1.cpp  serialplot.m
main/BT/: Beacon.c  Beacon.h  esp_ibeacon_api.h  ibeacon_demo.c
main/IMU_I2c/: IMU_I2c.cpp  IMU_I2c.hpp
main/KalmanF/: 1d_KF.c  1d_KF.h  inovations.c  state.h
main/MPU/: MPU6500.c  MPU6500.cpp  MPU6500.h  MPU6500.hpp  Madgwick.c  MahonyFilter.c  MahonyFilter.h  i2c.c  i2c.h  i2c_config.h  registers.h  timer_module.c  timer_module.h
main/SparkFunIMU/IMU/: IMU.cpp  IMU.h
main/SparkFunIMU/IMU/Calabration/: CalSensor.cpp  CalSensor.h  Offsets.cpp  Offsets.h  data.txt  magcal.h  magcaltest.cpp
main/SparkFunIMU/IMU/Calabration/magcalibrate/: buildInfo.mat  chol.cpp  chol.h  magcal.cpp  magcal.h  magcalibrate.cpp  magcalibrate.h  magcalibrate_data.h  magcalibrate_initialize.cpp  magcalibrate_initialize.h  magcalibrate_rtwutil.cpp  magcalibrate_rtwutil.h  magcalibrate_terminate.cpp  magcalibrate_terminate.h  magcalibrate_types.h  mldivide.cpp  mldivide.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  sqrt.cpp  sqrt.h  sqrtm.cpp  sqrtm.h  svd.cpp  svd.h  xaxpy.cpp  xaxpy.h  xdlanv2.cpp  xdotc.cpp  xdotc.h  xgehrd.cpp  xgehrd.h  xgemv.cpp  xgemv.h  (+8 more)
main/SparkFunIMU/IMU/ISM/: ISM.cpp  ISM.h  ISM_registers.h  ISM_settings.h  ISM_structs.h
main/SparkFunIMU/IMU/MMC/: MMC.cpp  MMC.h  MMC_registers.h  MMC_settings.h  MMC_structs.h
main/SparkFunIMU/Orientation/: Madgwick.h
main/Util/: test.c  test.h
