idf_component_register(SRCS "main1.cpp"
                            "IMU_I2c/IMU_I2c.cpp"
                        #     "MPU/MPU6500.cpp"
                        "SparkFunIMU/IMU/ISM/ISM.cpp"
                        "SparkFunIMU/IMU/MMC/MMC.cpp"
                        "SparkFunIMU/IMU/IMU.cpp"
                        "SparkFunIMU/Orientation/Madgwick.cpp"
                        "SparkFunIMU/IMU/Calabration/magcaltest.cpp"


                        "SparkFunIMU/IMU/Calabration/magcalibrate/magcalibrate.cpp"
                        # "SparkFunIMU/IMU/Calabration/magcalibrate/cat.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/chol.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/magcal.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/magcalibrate_initialize.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/magcalibrate_rtwutil.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/magcalibrate_terminate.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/mldivide.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/rt_nonfinite.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/rtGetInf.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/rtGetNaN.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/sqrt.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/sqrtm.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/svd.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xaxpy.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xdlanv2.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xdotc.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xgehrd.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xgemv.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xgerc.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xhseqr.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xnrm2.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xrot.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xrotg.cpp"
                        "SparkFunIMU/IMU/Calabration/magcalibrate/xswap.cpp"
                        # "SparkFunIMU/IMU/Calabration/magcalibrate/xzsvdc.cpp"
                        # "SparkFunIMU/IMU/Calabration/magcalibrate/xgeqp3.cpp"
                    INCLUDE_DIRS ".")

